--- a/src/main/resources/templates/diary/diary_list.html
+++ b/src/main/resources/templates/diary/diary_list.html
@@ -19,6 +19,7 @@
         <th scope="col">제목</th>
         <th scope="col">내용</th>
         <th scope="col">작성일</th>
+        <!--깃 배우는중-->
     </tr>
     </thead>
     <tbody>
