--- a/src/main/resources/templates/diary/diary_list.html
+++ b/src/main/resources/templates/diary/diary_list.html
@@ -19,7 +19,7 @@
         <th scope="col">제목</th>
         <th scope="col">내용</th>
         <th scope="col">작성일</th>
-        <!--깃 배우는중-->
+        <!--깃 배우는중?!!asdfd-->
     </tr>
     </thead>
     <tbody>
