--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,14 +19,14 @@
 
 
 
-
+<body>
 <nav th:replace="~{navbar :: navbarFragment}"></nav>
 
 
 
 <th:block layout:fragment="content"></th:block>
 
-
+<script layout:fragment="script"></script>
 <!--드랍다운 사용-->
 
 <!--자바 스트립트
