--- a/src/main/resources/templates/diary/mainDiary_form.html
+++ b/src/main/resources/templates/diary/mainDiary_form.html
@@ -21,13 +21,17 @@
         </div>
     </div>
 </div>
+
     <div class="col-sm-6 col-lg-3" >
         <div class="card" style="width: 18rem;">
             <img th:src="@{/2025-01-04.jpeg}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">일기목록</h5>
                 <p class="card-text">지나온 나를 되돌아보기.</p>
-                <a th:href="@{/diary/list}" class="btn btn-primary">그날을 떠올리며</a>
+                <a th:href="@{/diary/list}"  class="btn btn-primary">그날을 떠올리며</a>
+               <!-- <a th:href="@{/diary/list/${diary.id}|}" class="btn btn-primary">그날을 떠올리며</a>-->
+                <!--sec:authorize="isAuthenticated()" th:if="${diary.author != null and #authentication.getPrincipal().getUsername()
+                == diary.author.username}"-->
             </div>
         </div>
     </div>
