--- a/src/main/resources/templates/notice/notice_form.html
+++ b/src/main/resources/templates/notice/notice_form.html
@@ -13,7 +13,7 @@
             <div class="mb-3 row">
                 <label for="author" class="col-sm-2 col-form-label text-center">작성자</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="author" name="author" disabled th:value="${user.username}">
+                    <input type="text" class="form-control" disabled th:value="${user.username}">
                 </div>
             </div>
             <div class="mb-3 row">
